--- a/static/tpl/view_tpl.html
+++ b/static/tpl/view_tpl.html
@@ -10,7 +10,7 @@
     </div>
     </center>
   </div>
-  <div id="container" class="span12 well">
+  <div id="container" class="span12 well" ng-show="placesTypes[0].places.length != 0">
     <ul class="thumbnails">
       <li class="span12" ng-repeat="type in placesTypes">
         <div class="thumbnail">
