--- a/static/tpl/practice_tpl.html
+++ b/static/tpl/practice_tpl.html
@@ -1,4 +1,4 @@
-  <div class="map-container">
+  <div class="map-container" ng-class="user.username == 'Verunka' && 'vip'">
     <center>
     <div class="map-positioner">
       <h1> {{part}}</h1>
