--- a/wsgi/static/tpl/practice_tpl.html
+++ b/wsgi/static/tpl/practice_tpl.html
@@ -44,7 +44,7 @@
         </div>
         </div>
           <span class="pull-right" >
-              <a class="btn btn-large {{!showSummary || 'btn-primary'}}" href="#/view/{{part}}" >Pokračovat</a>
+              <a class="btn btn-large {{!showSummary || 'btn-primary'}}" href="#/view/{{part}}/" >Pokračovat</a>
           </span>
       </div>
       <div class="clearfix"></div>
