--- a/wsgi/static/tpl/practice_tpl.html
+++ b/wsgi/static/tpl/practice_tpl.html
@@ -11,7 +11,10 @@
     </center>
   </div>
   <div id="container" class="span12 well" ui-keypress="{enter: 'next()'}">
-      <div ng-show="!showSummary">
+      <div ng-show="question == undefined">
+        
+      </div>
+      <div ng-show="question != undefined && !showSummary">
           <h2><span>{{question.text}} </span>
               <span class="label" ng-show="question.type == 0"> 
                 <i class="flag-{{question.code}}"></i> {{question.place}}
