--- a/wsgi/static/tpl/practice_tpl.html
+++ b/wsgi/static/tpl/practice_tpl.html
@@ -41,9 +41,10 @@
       </div>
       <div ng-show="showSummary">
         <div>
-        <div class="progress">
+        <div class="progress" ng-show="summary != undefined">
           <div class="bar bar-success" style="width: {{summary.correctlyAnsweredRatio | percent }};">Úspěšnost: {{summary.correctlyAnsweredRatio | percent }}</div>
         </div>
+        <h2 ng-show="errorMessage != undefined" ng-bind="errorMessage"></h2>
         <div>
             <span ng-repeat="q in summary.questions" class="label {{q.code != q.answer && 'label-important' || 'label-success' }} ">
             <i class="flag-{{q.code}}"></i> {{q.place}}
