--- a/wsgi/openshift/core/static/tpl/practice_tpl.html
+++ b/wsgi/openshift/core/static/tpl/practice_tpl.html
@@ -12,26 +12,31 @@
   </div>
   <div id="container" class="span12 well" ui-keypress="{enter: 'next()'}">
       <div ng-show="question == undefined">
-        
+
       </div>
       <div ng-show="question != undefined && !showSummary">
           <h2><span>{{question.text}} </span>
-              <span class="label" ng-show="question.type == 0"> 
+              <span class="label" ng-show="question.type == 0">
                 <i class="flag-{{question.code}}"></i> {{question.place}}
               </span>
               <br class="clearfix">
           </h2>
           <span class="span7">
-          <span ng-hide="question.type == 0">
+          <span ng-show="question.type == 1">
               <select class="starters" ng-model="starterLetters" ng-change="openPlacesSelect()">
                 <option ></option>
-                <option ng-repeat="starter in places | starters" value="{{starter}}">{{starter | shorten}}</option> 
+                <option ng-repeat="starter in places | starters" value="{{starter}}">{{starter | shorten}}</option>
               </select>
               <select class="select2" ng-model="select">
                 <option ></option>
-                <option ng-repeat="place in places | starterLettersFilter : starterLetters" value="{{place.code}}">{{place.name}}</option> 
+                <option ng-repeat="place in places | starterLettersFilter : starterLetters" value="{{place.code}}">{{place.name}}</option>
               </select>
               <button class="btn btn-large {{canNext || 'btn-primary'}}" ng-click="check(select)" ng-disabled="!select || canNext" >Zkontrolovat</button>
+          </span>
+          <span ng-show="question.type == 2">
+              <button ng-repeat="place in options" value="{{place.code}}" class="btn btn-large" ng-click="check(place.code)">
+                 <i class="flag-{{place.code}}"></i> {{place.name}}
+              </button>
           </span>
           </span>
           <span class="span4" >
