--- a/wsgi/openshift/core/static/tpl/practice_tpl.html
+++ b/wsgi/openshift/core/static/tpl/practice_tpl.html
@@ -34,7 +34,7 @@
               <button class="btn btn-large {{canNext || 'btn-primary'}}" ng-click="check(select)" ng-disabled="!select || canNext" >Zkontrolovat</button>
           </span>
           <span ng-show="question.type == 2">
-              <button ng-repeat="place in options" value="{{place.code}}" class="btn btn-large" ng-click="check(place.code)">
+              <button ng-repeat="place in question.options" value="{{place.code}}" class="btn btn-large" ng-click="check(place.code)">
                  <i class="flag-{{place.code}}"></i> {{place.name}}
               </button>
           </span>
