--- a/wsgi/static/tpl/practice_tpl.html
+++ b/wsgi/static/tpl/practice_tpl.html
@@ -14,7 +14,7 @@
       <div ng-show="question == undefined">
 
       </div>
-      <div ng-show="question != undefined && !showSummary">
+      <div ng-show="question != undefined && !showSummary" class="practice">
           <h2><span>{{question.text}} </span>
               <span class="label" ng-show="question.type == 0">
                 <i class="flag-{{question.code}}"></i> {{question.place}}
