--- a/wsgi/openshift/core/static/tpl/view_tpl.html
+++ b/wsgi/openshift/core/static/tpl/view_tpl.html
@@ -2,23 +2,26 @@
     <center>
     <div>
     <div class="map-positioner">
+      <div id="map-holder">
+        <div class="loading-indicator"></div>
+      </div>
       <h1 ng-show="user == ''" ng-bind="part"></h1>
       <h1 ng-show="user != ''" ng-bind="user"></h1>
       <a  ng-show="user == ''" href="#/practice/{{part}}" class="btn btn-primary btn-large btn-practice" >Procvičovat</a>
       <!--<a href="#/practice/{{part}}" class="btn btn-primary btn-large btn-practice" ng-disabled="practiceCount == 0" >Procvičovat ({{practiceCount}})</a>-->
-      <div id="map-holder">
-      </div>
     </div>
     </div>
     </center>
   </div>
   <div id="container" class="span12 well">
+    <div ng-show="!placesTypes" class="loading-indicator">
+    </div>
     <ul class="thumbnails">
       <li class="span12" ng-repeat="type in placesTypes">
         <div class="thumbnail">
           <h3>{{type.name}}</h3>
           <div class="view-places">
-          <span ng-repeat="place in type.places" class="label" ng-class="{'label-inverse': place.highlight}" ng-mouseenter="hover(place.code, true)" ng-mouseleave="hover(place.code, false)"> 
+          <span ng-repeat="place in type.places" class="label" ng-class="{'label-inverse': place.highlight}" ng-mouseenter="hover(place.code, true)" ng-mouseleave="hover(place.code, false)">
             <i class="flag-{{place.code}}"></i> {{place.name || place}}
           </span>
           </br>
