--- a/wsgi/openshift/core/static/tpl/welcome_page_tpl.html
+++ b/wsgi/openshift/core/static/tpl/welcome_page_tpl.html
@@ -1,11 +1,13 @@
   <center class="map-container welcome-page jumbotron">
       <h1 >Zeměpis</h1>
-      <p class="col-10 main-paragraph">
+      <div class="col-lg-8 col-sm-11 col-12">
+      <p class="main-paragraph">
         je inteligentní aplikace na pro procvičvání znalosti slepých map.
         Obtížnost otázek je regulována podle správnosti odpovědí.
       </p>
       <a href="#/practice/" class="btn btn-primary btn-huge" >Začít procvičovat</a>
-      <p class="col-10">
+      <p>
         Poznámka: Zatím jsou k dispozici pouze státy USA. Do budoucna přibudou další státy, města, řeky a jiné.
       </p>
+      </div>
   </center>
