--- a/wsgi/openshift/core/static/tpl/welcome_page_tpl.html
+++ b/wsgi/openshift/core/static/tpl/welcome_page_tpl.html
@@ -2,10 +2,10 @@
       <h1 >Zeměpis</h1>
       <div class="col-lg-8 col-sm-11 col-12">
       <p class="main-paragraph">
-        je inteligentní aplikace na pro procvičvání znalosti slepých map.
+        je inteligentní aplikace na procvičvání znalosti slepých map.
         Obtížnost otázek je regulována podle správnosti odpovědí.
       </p>
-      <a href="#/practice/" class="btn btn-primary btn-huge" >Začít procvičovat</a>
+      <a href="#/practice/" class="btn btn-primary btn-large btn-huge" >Začít procvičovat</a>
       <p>
         Poznámka: Zatím jsou k dispozici pouze státy USA. Do budoucna přibudou další státy, města, řeky a jiné.
       </p>
