--- a/wsgi/openshift/core/static/tpl/view_tpl.html
+++ b/wsgi/openshift/core/static/tpl/view_tpl.html
@@ -11,11 +11,11 @@
     </div>
     </div>
   </center>
-  <div id="container" class="col-10 well">
+  <div id="container" class="col-sm-11 well">
     <div ng-show="!placesTypes" class="loading-indicator">
     </div>
     <ul class="thumbnails">
-      <li class="span12" ng-repeat="type in placesTypes">
+      <li class="" ng-repeat="type in placesTypes">
         <div class="thumbnail">
           <h3>{{type.name}}</h3>
           <div class="view-places">
