--- a/wsgi/openshift/core/static/tpl/view_tpl.html
+++ b/wsgi/openshift/core/static/tpl/view_tpl.html
@@ -19,8 +19,13 @@
         <div class="thumbnail">
           <h3>{{type.name}}</h3>
           <div class="view-places">
-          <span ng-repeat="place in type.places" class="label" ng-class="{'label-inverse': place.highlight}" ng-mouseenter="hover(place.code, true)" ng-mouseleave="hover(place.code, false)">
-            <i class="flag-{{place.code}}"></i> {{place.name || place}}
+          <span ng-repeat="place in type.places" ng-switch="type.haveMaps || place.code == 'us'" class="" ng-mouseenter="hover(place.code, true)" ng-mouseleave="hover(place.code, false)">
+              <a href="#/view/{{place.code}}/" ng-switch-when="true" class="btn btn-small">
+                <i class="flag-{{place.code}}"></i> {{place.name || place}}
+              </a>
+              <span ng-switch-default class="label">
+                <i class="flag-{{place.code}}"></i> {{place.name || place}}
+              </span>
           </span>
           <div class="clearfix"></div>
           <!--<a href="#/practice/{{part}}/{{type.name}}" class="btn btn-primary" >Procvičovat</a>-->
