--- a/wsgi/openshift/core/static/tpl/welcome_page_tpl.html
+++ b/wsgi/openshift/core/static/tpl/welcome_page_tpl.html
@@ -1,13 +1,13 @@
   <center class="map-container welcome-page jumbotron">
-      <h1 >Zeměpis</h1>
+      <h1 >Inteligentní Zeměpis</h1>
       <div class="col-lg-8 col-sm-11 col-12">
       <p class="main-paragraph">
-        je inteligentní aplikace na procvičvání znalosti slepých map.
-        Obtížnost otázek je regulována podle správnosti odpovědí.
+        je aplikace na procvičvání znalosti slepých map.
+        Aplikace přizpůsobuje obtížnost otázek znalostem studenta.
       </p>
       <a href="#/practice/" class="btn btn-primary btn-large btn-huge" >Začít procvičovat</a>
       <p>
-        Poznámka: Zatím jsou k dispozici pouze státy USA. Do budoucna přibudou další státy, města, řeky a jiné.
+        Poznámka: Zatím jsou k dispozici pouze státy. V budoucnu přibudou města, řeky a podrobnější mapy.
       </p>
       </div>
   </center>
