db access optimization

--- a/wsgi/openshift/core/static/tpl/view_tpl.html
+++ b/wsgi/openshift/core/static/tpl/view_tpl.html
@@ -20,7 +20,7 @@
           <h3>{{type.name}}</h3>
           <div class="view-places">
           <span ng-repeat="place in type.places" ng-switch="type.haveMaps || place.code == 'us'" class="" ng-mouseenter="hover(place.code, true)" ng-mouseleave="hover(place.code, false)">
-              <a href="#/view/{{place.code}}/" ng-switch-when="true" class="btn btn-small">
+              <a href="#/view/{{place.code}}/{{user}}" ng-switch-when="true" class="btn btn-small">
                 <i class="flag-{{place.code}}"></i> {{place.name || place}}
               </a>
               <span ng-switch-default class="label">
