minor bug fixes

--- a/wsgi/openshift/core/static/tpl/welcome_page_tpl.html
+++ b/wsgi/openshift/core/static/tpl/welcome_page_tpl.html
@@ -2,7 +2,7 @@
       <h1 >Inteligentní Zeměpis</h1>
       <div class="col-lg-8 col-sm-11 col-12">
       <p class="main-paragraph">
-        je aplikace na procvičvání znalosti slepých map.
+        je aplikace na procvičování znalosti slepých map.
         Aplikace přizpůsobuje obtížnost otázek znalostem studenta.
       </p>
       <a href="#/practice/" class="btn btn-primary btn-large btn-huge" >Začít procvičovat</a>
