name changed to Slepé mapy

--- a/wsgi/openshift/core/static/tpl/welcome_page_tpl.html
+++ b/wsgi/openshift/core/static/tpl/welcome_page_tpl.html
@@ -1,5 +1,5 @@
   <center class="map-container welcome-page jumbotron">
-      <h1 >Inteligentní Zeměpis</h1>
+      <h1 >Slepé Mapy</h1>
       <div class="col-lg-8 col-sm-11 col-12">
       <p class="main-paragraph">
         je aplikace na procvičování znalosti slepých map.
