--- a/wsgi/openshift/core/static/tpl/practice_tpl.html
+++ b/wsgi/openshift/core/static/tpl/practice_tpl.html
@@ -3,7 +3,7 @@
       <div id="map-holder">
         <div class="loading-indicator"></div>
       </div>
-      <h1> {{name}}</h1>
+      <h1 style="{{h1Style}}"> {{name}}</h1>
     </div>
     <div class="progress">
       <div class="progress-bar" style="width: {{progress}}%;"></div>
