teplates markup cleanup

--- a/wsgi/openshift/core/static/tpl/practice_tpl.html
+++ b/wsgi/openshift/core/static/tpl/practice_tpl.html
@@ -1,10 +1,8 @@
   <center class="map-container">
-    <div class="map-positioner">
       <div id="map-holder">
         <div class="loading-indicator"></div>
       </div>
-      <h1 style="{{h1Style}}"> {{name}}</h1>
-    </div>
+      <h1> {{name}}</h1>
   </center>
   <div class="progress quesions-progress">
     <div class="progress-bar" style="width: {{progress}}%;"></div>
