--- a/wsgi/openshift/geography/static/tpl/view_tpl.html
+++ b/wsgi/openshift/geography/static/tpl/view_tpl.html
@@ -19,7 +19,7 @@
             <!--<a href="#/practice/{{part}}/{{type.slug}}" class="btn btn-primary pull-right" ng-show="!type.haveMaps" >Procvičovat</a>-->
           </h3>
           <div class="view-places">
-          <span ng-repeat="place in type.places" ng-switch="type.haveMaps || place.code == 'us'" ng-mouseenter="hover(place, true)" ng-mouseleave="hover(place, false)">
+          <span ng-repeat="place in type.places" ng-switch="type.haveMaps" ng-mouseenter="hover(place, true)" ng-mouseleave="hover(place, false)">
               <a href="#/view/{{place.code}}/{{user}}" ng-switch-when="true" class="btn btn-default btn-sm">
                 <i class="flag-{{place.code}}"></i> {{place.name || place}}
               </a>
